<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Appointments</string>
    
    <!-- MENU -->
	<string name="drawer_menu">Menu</string>
	<string name="drawer_open">Ouvert</string>
 	<string name="drawer_close">Fermé</string>
 	
 	<string name="menu_home">Accueil</string>
 	<string name="menu_calendar">Calendrier</string>
 	<string name="menu_tasks">Tâches</string>
 	<string name="menu_map">Carte</string>
 	<string name="menu_history">Historique</string>
 	<string name="menu_account">Compte</string>
 	<string name="menu_settings">Paramètres</string>
 	<string name="menu_about">À propos</string>
 	
	<!-- OPTIONS MENU -->
	<string name="label_create_task">Création de tâche</string>
    
    <!-- TITLE -->
    <string name="title_connection">Connexion</string>
    <string name="title_inscription">Inscription</string>
    <string name="title_forget_password">Mot de passe oublié</string>
    <string name="title_home">Accueil</string>
    <string name="title_create_task">Création de tâche</string>
    
    <!-- CONNECTION -->
    <string name="connect_auto">Autoconnexion</string>
    <string name="connect_field_empty">Tous les champs ne sont pas complet !</string>
    <string name="connect_field_error">Votre pseudo ou mot de passe n\'est pas correcte !</string>

    <!-- BUTTON -->
    <string name="button_ok">OK</string>
    <string name="button_on">ON</string>
    <string name="button_off">OFF</string>
    <string name="button_call">Appeler</string>
    <string name="button_send">Envoyer</string>
    <string name="button_find">Le retrouver</string>
    <string name="button_save">Enregistrer</string>
    <string name="button_confirm">Confirmer</string>
    <string name="button_reality">Réalité</string>
    <string name="button_follow">Le suivre</string>
    <string name="button_inscription">Inscription</string>
    <string name="button_messages">Messages</string>
    <string name="button_connect">Connexion</string>
    <string name="button_deconnection">Déconnexion</string>
    <string name="button_create">Création</string>
    
    <!-- LABEL -->
    <string name="label_lastname">Nom :</string>
    <string name="label_firstname">Prénom :</string>
    <string name="label_birth">Date de naissance :</string>
    <string name="label_status">Statut :</string>
    <string name="label_client">Client</string>
    <string name="label_pro">Professionnel</string>
    <string name="label_gender">Genre :</string>
    <string name="label_male">Masculin</string>
    <string name="label_female">Féminin</string>
   	<string name="label_email">Email :</string>
   	<string name="label_username">Pseudo :</string>
   	<string name="label_datebegin">Date de début :</string>
   	<string name="label_dateend">Date de fin :</string>
   	<string name="label_company_name">Raison sociale :</string>
   	<string name="label_postal_address">Adresse postale :</string>
   	<string name="label_num_siren">N° SIREN :</string>
   	<string name="label_contact_firstname">Nom du responsable :</string>
   	<string name="label_contact_lastname">Prénom du responsable :</string>
   	<string name="label_phone">Téléphone :</string>
   	<string name="label_password">Mot de passe :</string>
   	<string name="label_passwordconfirm">Confirmer mot de passe :</string>
    <string name="label_rememberme">Se souvenir</string>
    <string name="label_connection">Connectez-vous à votre compte ou créez en un.</string>
    <string name="label_inscription"><u>S\'inscrire</u></string>
    <string name="label_password_forgotten"><u>Mot de passe oublié ?</u></string>
    <string name="label_createaccount">Veuillez remplir tous les champs avant de créer votre compte.</string>
    <string name="label_send_password">Veuillez saisir votre adresse électronique valide et nous vous enverrons par email votre mot de passe actuel.</string>
 	<string name="label_title">Titre</string>
 	<string name="label_description">Description</string>
 	<string name="label_category">Catégorie</string>
 	<string name="label_subcategory">Sous-catégorie</string>	
    
    <!-- TOAST -->
    <string name="toast_fields_empty">Tous les champs ne sont pas encore remplis</string>
    <string name="toast_error_password">Le mot de passe n\'est pas le même</string>
    <string name="toast_error_email">L\'email n\'est pas valide</string>
    
   	<!-- ERROR -->
   	<string name="error_empty_field">Champ obligatoire</string>
   	<string name="error_email">Email invalide</string>
   	
</resources>
