<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollView" >
    <LinearLayout style="@style/ScrollLayout">
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/label_send_password"
	        android:textColor="@color/black"
	        android:textSize="@dimen/text_26" />
	
	    <TextView
	        style="@style/FormLabel"
	        android:text="@string/label_email" />
	
	    <EditText
	        android:id="@+id/edit_email"
	        style="@style/FormValue"
	        android:inputType="textEmailAddress" />
	
	    <Button
	        android:id="@+id/button_send"
	        style="@style/Button"
	        android:layout_marginTop="50dp"
	        android:onClick="sendEmail"
	        android:text="@string/button_send" />
	    
	</LinearLayout>
</ScrollView>